adding style to buttons

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           </div>
 
           <div class="campo">
-            <label for="março">Março</label>
-            <input type="text" name="março" id="março" required />
+            <label for="marco">Março</label>
+            <input type="text" name="marco" id="marco" required />
           </div>
 
           <div class="campo">
@@ -74,7 +74,7 @@
           </div>
         </div>
 
-        <button type="submit" id="botao">Enviar</button>
+        <button type="button" id="botao">Enviar</button>
       </form>
     </div>
     <script src="index.js"></script>
