--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
         </div>
 
         <button type="button" id="botao">Enviar</button>
+
+        <div id="resposta"></div>
       </form>
     </div>
     <script src="index.js"></script>
