--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <div class="content">
       <h1>Dashboard de lucros</h1>
 
+      <div class="instrucoes">
+        Como utilizar: Adicione os seus lucros (ou da sua empresa) de cada mes e
+        clique em enviar, para descobrir qual a maior subsequência de meses onde
+        seu lucro aumentou.
+      </div>
       <form action="">
         <div class="inputs">
           <div class="campo">
